--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,4 +1,13 @@
-CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_USB_LOGGING=n
+
+# Milliseconds of inactivity before entering idle state
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+
+# Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
